fix naming of doors and rooms, external door transitions
* remove door constructors without name
* name states as well
* add transitions to external doors